iff: fix invalid reads (ticket 689)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>